fixed users-main css overflow

--- a/client/src/app/app.component.css
+++ b/client/src/app/app.component.css
@@ -18,9 +18,4 @@
     border-radius: 10px;
     margin: 10px;
     padding: 5px;
-    overflow: auto;
 }
-
-/* .container app-users-main {
-    overflow:auto;
-} */
